--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -11,7 +11,7 @@
     {% for post in posts %}
         <div>
             <p>Published on: {{ post.published_date }}</p>
-            <h2><a href="">{{ post.title }}</a></h2>
+            <h2><a href="{% url 'post_detail' pk=post.pk  %}">{{ post.title }}</a></h2>
             <p>{{ post.text | linebreaksbr }}</p>
         </div>
     {% endfor %}
