--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,17 +1,13 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Post Detail</title>
-</head>
-<body>
-    {% if post.published_date %}
-    <div>
-        {{ post.published_date }}
+{% extends 'blog/base.html' %}
+
+{% block content %}
+    <div class="post">
+        {% if post.published_date %}
+        <div class="date">
+            {{ post.published_date }}
+        </div>
+        {% endif %}
+        <h2>{{ post.title }}</h2>
+        <p>{{ post.text | linebreaksbr }}</p>
     </div>
-    {% endif %}
-    <h2>{{ post.title }}</h2>
-    <p>{{ post.text | linebreaksbr }}</p>
-</body>
-</html>
+{% endblock %}
