--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -29,3 +29,14 @@ h1, h2, h3, h4 {
 .post h2 a:visited{
     color: midnightblue;
 }
+
+.content{
+    margin-left: 40px;
+}
+
+.post-form-blog textarea {
+    width: 100%;
+}
+.post-form-blog .btn-primary{
+    float: right;
+}
