--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -16,7 +16,9 @@
         <a href="{% url 'post_list' %}"><h1>Self Engineered Blog</h1></a>
         <div class="page-header-right">
             <a href="/admin">Admin</a>
-            <a href="{% url 'post_new' %}">New</a>
+            {% if user.is_authenticated %}
+                <a href="{% url 'post_new' %}">New</a>
+            {% endif %}
         </div>
     </div>
     <div class="content container">
