--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -9,6 +9,8 @@
         {% endif %}
         <h2>{{ post.title }}</h2>
         <p>{{ post.text | linebreaksbr }}</p>
-        <a href="{% url 'post_edit' pk=post.pk %}"><i class="far fa-edit" style="color:cornflowerblue; float: right;"></i></a>
-    </div>
+        {% if user.is_authenticated %}
+            <a href="{% url 'post_edit' pk=post.pk %}"><i class="far fa-edit" style="color:cornflowerblue; float: right;"></i></a>
+        {% endif %}
+        </div>
 {% endblock %}
