--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -15,9 +15,9 @@
     <div class="page-header">
         <a href="{% url 'post_list' %}"><h1>Self Engineered Blog</h1></a>
         <div class="page-header-right">
-            <a href="/admin">Admin</a>
             {% if user.is_authenticated %}
-                <a href="{% url 'post_new' %}">New</a>
+                <a href="{% url 'post_draft_list' %}"><i class="fas fa-list-ul"></i></a>
+                <a href="{% url 'post_new' %}"><i class="fas fa-pen-fancy"></i></a>
             {% endif %}
         </div>
     </div>
