--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -4,13 +4,20 @@
     <div class="post">
         {% if post.published_date %}
         <div class="date">
-            {{ post.published_date }}
+            {{ post.published_date |date:'d-m-Y' }}
+        </div>
+        {% else %}
+        <div class="date">
+            {{ post.created_date |date:'d-m-Y' }}
         </div>
         {% endif %}
         <h2>{{ post.title }}</h2>
         <p>{{ post.text | linebreaksbr }}</p>
         {% if user.is_authenticated %}
             <a href="{% url 'post_edit' pk=post.pk %}"><i class="far fa-edit" style="color:cornflowerblue; float: right;"></i></a>
+        {% endif %}
+        {% if not post.published_date %}
+            <a href="{% url 'post_publish' pk=post.pk %}"><button class="btn btn-primary">Publish</button></a>
         {% endif %}
         </div>
 {% endblock %}
