--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -4,7 +4,7 @@
     {% for post in posts %}
     <div class="post">
         <div class="date">
-            <p>{{ post.published_date }}</p>
+            <p>{{ post.published_date|date:'d-m-Y' }}</p>
         </div>
         <h2><a href="{% url 'post_detail' pk=post.pk  %}">{{ post.title }}</a></h2>
         <p>{{ post.text | linebreaksbr }}</p>
