--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -14,7 +14,7 @@
         <h2>{{ post.title }}</h2>
         <p>{{ post.text | linebreaksbr }}</p>
         {% if user.is_authenticated %}
-            <a href="{% url 'post_edit' pk=post.pk %}"><i class="far fa-edit" style="color:cornflowerblue; float: right;"></i></a>
+            <a href="{% url 'post_edit' pk=post.pk %}"><i class="far fa-edit" title="Edit" style="color:cornflowerblue; float: right;"></i></a>
         {% endif %}
         {% if not post.published_date %}
             <a href="{% url 'post_publish' pk=post.pk %}"><button class="btn btn-primary">Publish</button></a>
