Add login functionality

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/blog.css' %}">
-    <title>SE Blog</title>
+    <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
     <div class="page-header">
@@ -18,6 +18,8 @@
             {% if user.is_authenticated %}
                 <a href="{% url 'post_draft_list' %}" title="Drafts"><i class="fas fa-list-ul"></i></a>
                 <a href="{% url 'post_new' %}" title="New post"><i class="fas fa-pen-fancy"></i></a>
+            {% else %}
+                <a href="{% url 'login' %}"><i class="fas fa-sign-in-alt"></i></a>
             {% endif %}
         </div>
     </div>
