--- a/blog/templates/blog/post_edit.html
+++ b/blog/templates/blog/post_edit.html
@@ -1,5 +1,7 @@
 {% extends 'blog/base.html'%}
 
+{% block title %}{{post.title}}{% endblock %}
+
 {% block content %}
     <h2>New Post</h2>
     <form method="POST" class="post-form-blog">
