--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -16,6 +16,7 @@
         <a href="{% url 'post_list' %}"><h1>Self Engineered Blog</h1></a>
         <div class="page-header-right">
             {% if user.is_authenticated %}
+                <a href="{% url 'logout' %}" title="Logout" ><i class="fas fa-sign-out-alt"></i></a>
                 <a href="{% url 'post_draft_list' %}" title="Drafts"><i class="fas fa-list-ul"></i></a>
                 <a href="{% url 'post_new' %}" title="New post"><i class="fas fa-pen-fancy"></i></a>
             {% else %}
