--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -22,4 +22,20 @@
             <a href="{% url 'post_publish' pk=post.pk %}"><button class="btn btn-primary">Publish</button></a>
         {% endif %}
         </div>
+
+        <!-- Comment section -->
+        <hr>
+
+        <a href="{% url 'comment_to_post' pk=post.pk %}"><button class="btn btn-secondary">comment</button></a>
+        {% for comment in post.comments.all %}
+            <div class="comment">
+                <div class="date">
+                    {{ comment.created_date }}
+                </div>
+                <strong>{{ comment.author }}</strong>
+                <p>{{ comment.text}}</p>
+            </div>
+        {% empty %}
+            <p>No comments yet...</p>
+        {% endfor %}
 {% endblock %}
