--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -10,6 +10,7 @@
         </div>
         <h2><a href="{% url 'post_detail' pk=post.pk  %}">{{ post.title }}</a></h2>
         <p>{{ post.text | linebreaksbr }}</p>
+        <a href="{% url 'post_detail' pk=post.pk %}" class="smaller" >Comments: {{ post.approved_comments.count }}</a></h5>
     </div>
     {% endfor %}
 {% endblock %}
