--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,5 +1,7 @@
 {% extends 'blog/base.html' %}
 
+{% load markdownify %}
+
 {% block title %}{{post.title}}{% endblock %}
 
 {% block content %}
@@ -14,7 +16,7 @@
         </div>
         {% endif %}
         <h2>{{ post.title }}</h2>
-        <p>{{ post.text | linebreaksbr }}</p>
+        <p>{{ post.text | markdown | safe }}</p>
         {% if user.is_authenticated %}
             <a href="{% url 'post_edit' pk=post.pk %}"><i class="far fa-edit" title="Edit" style="color:cornflowerblue; float: right;"></i></a>
         {% endif %}
@@ -34,7 +36,7 @@
                         {{ comment.created_date }}
                     </div>
                     <strong>{{ comment.author }}</strong>
-                    <p>{{ comment.text}}</p>
+                    <p>{{ comment.text | markdown | safe | linebreaksbr }}</p>
                     {% if not comment.approved and user.is_superuser %}
                     <a href="{% url 'approve_comment' pk=comment.pk %}"><small><i class="fas fa-check smaller"></i></small></a>
                     <a href="{% url 'remove_comment' pk=comment.pk %}"><small><i class="far fa-trash-alt smaller"></i></small></a>
