--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -18,6 +18,10 @@
         <h2>{{ post.title }}</h2>
         <p>{{ post.text | markdown | safe }}</p>
         {% if user.is_authenticated %}
+            <a href="{% url 'post_delete' pk=post.pk %}" class="btn btn-danger" title="Delete" style="float:right;" 
+            onclick="return confirm('Are you sure you want to delete this post?')">
+            <i class="far fa-trash-alt smaller"></i>
+            </a>
             <a href="{% url 'post_edit' pk=post.pk %}"><i class="far fa-edit" title="Edit" style="color:cornflowerblue; float: right;"></i></a>
         {% endif %}
         {% if not post.published_date %}
