Add the signup link at the login page.

--- a/blog/templates/registration/login.html
+++ b/blog/templates/registration/login.html
@@ -9,4 +9,5 @@
         {{ form.as_p }}
         <button type="submit" class="btn btn-success">Login</button>
     </form>
+    <p>Don't have an account? <small><a href="{% url 'signup' %}" class="smaller">Sign Up here</a></small></p>
 {% endblock %}
